cluster/apps/media/nzbget/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nzbget
  namespace: media
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: networking
    sectionName: https
  hostnames:
  - "nzbget.${SECRET_CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nzbget
      port: 6789
